hphp/hack/test/typecheck/missing_xhp_typehint.php.exp
File "missing_xhp_typehint.php", line 5, characters 23-26:
Was expecting a type hint (Typing[4032])
