hphp/hack/test/typecheck/missing_xhp_typehint.php
<?hh

class :a {
  attribute string foo;
  public function bar($baz): void {}
}
